welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:78: error: value Blue is not a member of object java.awt.Color
motif()(Color.Blue)
              ^